--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><a href="https://aws.amazon.com/pt/certification/?trk=9cd9d99c-3597-4b9b-b044-5b9213216efc&sc_channel=ps&s_kwcid=AL!4422!3!616960548890!e!!g!!aws%20certification&ef_id=EAIaIQobChMI_dSUidyJ_QIVz0VIAB32cQTzEAAYASAAEgKrBvD_BwE:G:s&s_kwcid=AL!4422!3!616960548890!e!!g!!aws%20certification">AWS</a></li>
       <li><a href="https://learn.microsoft.com/pt-br/certifications/azure-fundamentals/">Azure</a></li>
       <li><a href="https://cloud.google.com/?utm_source=google&utm_medium=cpc&utm_campaign=latam-BR-all-pt-dr-BKWS-all-all-trial-e-dr-1605194-LUAC0010101&utm_content=text-ad-none-any-DEV_c-CRE_512285710731-ADGP_Hybrid%20%7C%20BKWS%20-%20EXA%20%7C%20Txt%20~%20GCP_General-KWID_43700062788251521-kwd-301173107424&utm_term=KW_google%20cloud-ST_Google%20Cloud&gclid=CjwKCAiA85efBhBbEiwAD7oLQGparToeqZnR1F84EgVFjTFZ9HptsVxmGPhOtOG5aABSfDkqnrUchBoC0aUQAvD_BwE&gclsrc=aw.ds&hl=pt-br">Google</a></li>
-      <li><a href="sobre">Sobre Nós</a></li>
+      <li><a href="CADASTRO.html">Cadastre-se</a></li>
       <li><a href="contato.html">Contato</a></li>
       
     </ul>
