--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Cadastro de Usuário</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css.css">
   </head>
   <body>
     <h1>Cadastro de Usuário</h1>
