--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -41,6 +41,6 @@
     </form>
     
     <script src="xlsx.full.min.js"></script>
-    <script src="script.js"></script>
+    <script src="js.js"></script>
   </body>
 </html>
