--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cadastro de Usuário</title>
+    <style>
+     <title>Cadastro de Usuário</title>
+      color:white;
+    </style>
      <nav>
     <ul>
       <link rel="stylesheet" href="style.css">
