--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <head>
     <meta charset="UTF-8">
+    <title>Cadastro de Usuário</title>
     <style>
-     <title>Cadastro de Usuário</title>
-      color:white;
+      head {
+        color: white;
+      }
     </style>
+  </head>
      <nav>
     <ul>
       <link rel="stylesheet" href="style.css">
