--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -22,6 +22,7 @@
       
     </ul>
   </nav>
+    <link rel="stylesheet" href="css.css">
     <form id="cadastro-form" action="#" method="post">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" required>
