--- a/CADASTRO.html
+++ b/CADASTRO.html
@@ -13,6 +13,7 @@
     <nav>
     <ul>
       <link rel="stylesheet" href="style.css">
+       <title>Cadastro de Usuário</title>
       <li><a href="index.html">Home</a></li>
       <li><a href="https://aws.amazon.com/pt/certification/?trk=9cd9d99c-3597-4b9b-b044-5b9213216efc&sc_channel=ps&s_kwcid=AL!4422!3!616960548890!e!!g!!aws%20certification&ef_id=EAIaIQobChMI_dSUidyJ_QIVz0VIAB32cQTzEAAYASAAEgKrBvD_BwE:G:s&s_kwcid=AL!4422!3!616960548890!e!!g!!aws%20certification">AWS</a></li>
       <li><a href="https://learn.microsoft.com/pt-br/certifications/azure-fundamentals/">Azure</a></li>
